<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="horizontal">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_weight="0">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/recent_fall" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/need_cane" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/unsteady" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/poor_balance" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/worried" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/push_from_chair" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/curb" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/toilet" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/numbness" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/light_headed_medicine" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/sleep_medicine" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/depressed" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/recent_fall"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Yes" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <CheckBox
                            android:id="@+id/need_cane"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Yes" />\

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <CheckBox
                            android:id="@+id/unsteady"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Yes" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <CheckBox
                            android:id="@+id/poor_balance"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Yes" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <CheckBox
                            android:id="@+id/worried"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Yes" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <CheckBox
                            android:id="@+id/push_from_chair"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Yes" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <CheckBox
                            android:id="@+id/curb"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Yes" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <CheckBox
                            android:id="@+id/toilet"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="Yes" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <CheckBox
                            android:id="@+id/numbness"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="Yes" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <CheckBox
                            android:id="@+id/light_headed_medicine"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="Yes" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <CheckBox
                            android:id="@+id/sleep_medicine"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="Yes" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <CheckBox
                            android:id="@+id/depressed"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="Yes" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>



        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Submit" />

    </LinearLayout>

</RelativeLayout>